--- a/writerstyle.css
+++ b/writerstyle.css
@@ -1,5 +1,9 @@
 body {
-    background-color: rgb(73, 73, 180);
+    background-color: black;
+}
+
+.container {
+    background-color: rgb(221, 138, 78);
 }
 
 h1 {
@@ -14,6 +18,7 @@ h4 {
 p {
     text-align: center;
     font-weight: bold;
+    color: blanchedalmond;
 }
 
 .footer {
